--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multiparty": "^4.1.0",
+    "nodemon": "^2.0.4",
     "uuid": "^8.1.0"
   }
 }
