--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "ejs": "^3.1.3",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.1",
     "method-override": "^3.0.0",
     "moment": "^2.20.1",
