--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.3",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.5.1",
