--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon src/controllers/app.js"
   },
   "dependencies": {
+    "@google-cloud/debug-agent": "^5.0.0",
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
