--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Gomez-Lucia",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/controllers/app.js"
+    "start": "nodemon /app.js"
   },
   "dependencies": {
     "@google-cloud/debug-agent": "^5.0.0",
@@ -18,12 +18,12 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.1",
     "method-override": "^3.0.0",
-    "moment": "^2.20.1",
-    "mongoose": "^5.0.1",
+    "moment": "^2.27.0",
+    "mongoose": "^5.9.20",
     "mongoose-pagination": "^1.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multiparty": "^4.1.0",
-    "uuid": "^8.1.0"
+    "uuid": "^8.2.0"
   }
 }
