--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "nodemon /app.js"
   },
   "dependencies": {
-    "@google-cloud/debug-agent": "^5.0.0",
+    "@google-cloud/debug-agent": "^5.1.0",
     "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.3",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.1",
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
@@ -21,6 +24,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multiparty": "^4.1.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "uuid": "^8.2.0"
   }
 }
